src/objects/TFHC__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>項目連動てすと３</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Test_relation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>牛肉</fullName>
                </value>
                <value>
                    <fullName>鶏肉</fullName>
                </value>
                <value>
                    <fullName>豚肉</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC__c</fullName>
        <label>HC対象判定</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>金額</fullName>
                </value>
                <value>
                    <fullName>難易度</fullName>
                </value>
                <value>
                    <fullName>ステコミ判断</fullName>
                </value>
                <value>
                    <fullName>対象外</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_tryDate__c</fullName>
        <label>次回HC実施日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JM_mail__c</fullName>
        <label>JM_mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Oppotunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>リード</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>TFヘルスチェック</relationshipLabel>
        <relationshipName>TF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_relation__c</fullName>
        <label>連動項目テスト</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HC__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ジャガイモ</fullName>
                </value>
                <value>
                    <fullName>ニンジン</fullName>
                </value>
                <value>
                    <fullName>にんにく</fullName>
                </value>
                <value>
                    <fullName>牛肉</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>テスト</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>TFヘルスチェック</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>HC_{0000000}</displayFormat>
        <label>TFヘルスチェック</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>